--- a/CustomerUI/SpendingReport.xaml
+++ b/CustomerUI/SpendingReport.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomerUI"
         mc:Ignorable="d"
-        Title="SpendingReport" Height="450" Width="800">
+        Title="SpendingReport" Height="450" Width="315">
     <Grid>
         <StackPanel Background="LightGray" HorizontalAlignment="Left" Height="126" Margin="34,36,0,0" VerticalAlignment="Top" Width="250"/>
         <Label Content="Account number:" HorizontalAlignment="Left" Margin="52,48,0,0" VerticalAlignment="Top" Width="110"/>
@@ -20,11 +20,8 @@
         <Label Content="To:" HorizontalAlignment="Left" Margin="34,262,0,0" VerticalAlignment="Top"/>
         <DatePicker x:Name="dpToDate" HorizontalAlignment="Left" Margin="93,262,0,0" VerticalAlignment="Top" Width="191"/>
         <Button Name="btViewReport" Click="btViewReport_Click" Content="View report" HorizontalAlignment="Left" Margin="122,314,0,0" VerticalAlignment="Top" Width="75"/>
-        <StackPanel Background="Azure" HorizontalAlignment="Left" Height="269" Margin="354,80,0,0" VerticalAlignment="Top" Width="379"/>
-        <RadioButton Checked="rbPieChart_Checked" Name="rbPieChart" Content="Pie chart" GroupName="ChartType" IsChecked="True" HorizontalAlignment="Left" Margin="427,36,0,0" VerticalAlignment="Top"/>
-        <RadioButton Checked="rbBarGraph_Checked" Name="rbBarGraph" Content="Bar graph" GroupName="ChartType" HorizontalAlignment="Left" Margin="525,36,0,0" VerticalAlignment="Top"/>
-        <ContentControl Name="contentControl" Content="ContentControl" HorizontalAlignment="Left" Margin="354,80,0,0" VerticalAlignment="Top" Height="278" Width="379"/>
-
-
+        <RadioButton Checked="rbPieChart_Checked" Name="rbPieChart" Content="Pie chart" GroupName="ChartType" IsChecked="True" HorizontalAlignment="Left" Margin="427,36,-213,0" VerticalAlignment="Top" Width="93"/>
+        <RadioButton Checked="rbBarGraph_Checked" Name="rbBarGraph" Content="Bar graph" GroupName="ChartType" HorizontalAlignment="Left" Margin="525,36,-306,0" VerticalAlignment="Top" Width="88"/>
+        <ContentControl Name="contentControl" Content="ContentControl" HorizontalAlignment="Left" Margin="324,85,-391,0" VerticalAlignment="Top" Height="256" Width="374"/>
     </Grid>
 </Window>
