Fixing event in main window

--- a/CustomerUI/MainWindow.xaml
+++ b/CustomerUI/MainWindow.xaml
@@ -14,6 +14,6 @@
         <PasswordBox Name="pbClientPassword" PasswordChanged="pbClientPassword_PasswordChanged" HorizontalAlignment="Left"  Margin="238,183,0,0" VerticalAlignment="Top" Width="151" Height="23" MaxLength="15"/>
         <Label Content="Password:" HorizontalAlignment="Left" Margin="168,183,0,0" VerticalAlignment="Top"/>
         <Button Content="Login" IsDefault="True" HorizontalAlignment="Left" Margin="263,237,0,0" VerticalAlignment="Top" Width="75" Click="btLoginClicked"/>
-        <Button Content="Cancel" IsCancel="True" Name="btCancel" HorizontalAlignment="Left" Margin="168,237,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Cancel" Click="btCancel_Click" IsCancel="True" Name="btCancel" HorizontalAlignment="Left" Margin="168,237,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
